BB-8667: Management Console > Configuration > Theme > Select Page Template select is misaligned - fixed Select Page Template

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro.less
@@ -169,11 +169,15 @@ label, input, button, select, textarea { font-size:13px; color:#777;}
       }
       .control-subgroup {
         .controls {
-          margin-left: 140px;
+          margin-left: 0;
+          display: inline-block;
         }
       }
       .control-label.wrap {
-        width: 130px;
+        display: inline-block;
+        width: auto;
+        padding-left: 0;
+        padding-right: 5px;
       }
       label.control-label {
         width: auto;
